--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -21,7 +21,7 @@
     <div class="content hero-content">
 
       <header class="header flex-container">
-        <a href="http://" class="header-logo flex-container">
+        <a href="https://rolling-scopes-school.github.io/vadavur-JSFE2021Q1/wildlife/" class="header-logo flex-container">
           <img src="assets/wildlife-logo.svg" alt="Wildlife logo">
           <h1 class="text-logo">
             WILDLIFE
@@ -142,7 +142,7 @@
       
   <footer class="footer">
     <div class="footer-div flex-container content">
-      <a href="http://" class="footer-logo flex-container">
+      <a href="https://rolling-scopes-school.github.io/vadavur-JSFE2021Q1/wildlife/" class="footer-logo flex-container">
         <img src="assets/wildlife-logo.svg" alt="Wildlife logo">
         <h1 class="text-logo">
           WILDLIFE
