--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -42,7 +42,7 @@
       <section class="main__top">
         <div class="top__content">
           <h2 class="top__heading">Watch your favorite animal <span class="text_uppercase">online</span></h2>
-          <a href="../zoos/panda/index.html" target="_blank" rel="noopener noreferrer">
+          <a href="../zoos/panda/index.html">
             <button class="btn btn_action_play">
               &#9654 Play
             </button>
@@ -73,31 +73,123 @@
       <article class="main__article carousel-2">
         <h3 class="article__heading carousel-2__heading">Pets in zoo</h3>
         <div class="carousel-2__wrapper">
-          <button class="carousel-2__btn"><img src="../../assets/icons/arrow_left.png" alt=""></button>
+          <button class="carousel__btn"><img src="../../assets/icons/arrow_left.png" alt=""></button>
           <div class="carousel-2__img-wrapper">
-            <img class="carousel-2__img" src="../../assets/images/image_panda-2.png" alt="Panda, China">
-            <img class="carousel-2__img" src="../../assets/images/image_polarbear-2.png" alt="Polar Bear, Canada">
+            <a class="carousel-2__img-link" href="../zoos/panda/index.html">
+              <img class="carousel-2__img" src="../../assets/images/image_panda-2.png" alt="Panda, China">
+              <p class="img__capture">Panda, China</p>
+            </a>
+            <a class="carousel-2__img-link">
+              <img class="carousel-2__img" src="../../assets/images/image_polarbear-2.png" alt="Polar Bear, Canada">
+              <p class="img__capture">Polar Bear, Canada</p>
+            </a>
           </div>
           <div class="carousel-2__img-wrapper">
-            <img class="carousel-2__img" src="../../assets/images/image_alligator-2.png" alt="Alligator, USA">
-            <img class="carousel-2__img" src="../../assets/images/image_eagle-2.png" alt="Bald Eagle, USA">
+            <a class="carousel-2__img-link" href="../zoos/alligator/index.html">
+              <img class="carousel-2__img" src="../../assets/images/image_alligator-2.png" alt="Alligator, USA">
+              <p class="img__capture">Alligator, USA</p>
+            </a>
+            <a class="carousel-2__img-link" href="../zoos/eagle/index.html">
+              <img class="carousel-2__img" src="../../assets/images/image_eagle-2.png" alt="Bald Eagle, USA">
+              <p class="img__capture">Bald Eagle, USA</p>
+            </a>
           </div>
           <div class="carousel-2__img-wrapper">
-            <img class="carousel-2__img" src="../../assets/images/image_gorilla-2.png" alt="Gorilla, Eastern DRC">
-            <img class="carousel-2__img" src="../../assets/images/image_owl-2.png" alt="Arctic snowy owl, Alaska">
+            <a class="carousel-2__img-link" href="../zoos/gorilla/index.html">
+              <img class="carousel-2__img" src="../../assets/images/image_gorilla-2.png" alt="Gorilla, Eastern DRC">
+              <p class="img__capture">Gorilla, Eastern DRC</p>
+            </a>
+            <a class="carousel-2__img-link">
+              <img class="carousel-2__img" src="../../assets/images/image_owl-2.png" alt="Arctic snowy owl, Alaska">
+              <p class="img__capture">Arctic snowy owl, Alaska</p>
+            </a>
           </div>
           <div class="carousel-2__img-wrapper">
-            <img class="carousel-2__img" src="../../assets/images/image_elefant-2.png" alt="Elephant, South Africa">
-            <img class="carousel-2__img" src="../../assets/images/image_penguin-2.png" alt="Penguin, USA">
+            <a class="carousel-2__img-link">
+              <img class="carousel-2__img" src="../../assets/images/image_elefant-2.png" alt="Elephant, South Africa">
+              <p class="img__capture">Elephant, South Africa</p>
+            </a>
+            <a class="carousel-2__img-link">
+              <img class="carousel-2__img" src="../../assets/images/image_penguin-2.png" alt="Penguin, USA">
+              <p class="img__capture">Penguin, USA</p>
+            </a>
           </div>
-          <button class="carousel-2__btn"><img src="../../assets/icons/arrow_left.png" alt=""></button>
+          <button class="carousel__btn"><img src="../../assets/icons/arrow_right.png" alt=""></button>
         </div>
-
+        <a href="../map/index.html">
+          <button class="btn btn_action_choose">Choose your favorite</button>
+        </a>
       </article>
-      <article></article>
-      <article></article>
+      <article class="main__article scheme">
+        <h3 class="article__heading scheme__heading">Pay and feed</h3>
+        <div class="scheme__wrapper">
+            <figure class="scheme__figure">
+              <img class="scheme__img" src="../../assets/images/card_scheme.png" alt="Bank cards picture">
+              <figcaption class="img__figcaption">You can pay for a donation to any animal using your Credit/Debit card</figcaption>
+            </figure>
+            <figure class="scheme__figure">
+              <img class="scheme__arrow-up" src="../../assets/images/high_arrow.png" alt="">
+            </figure>
+            <figure class="scheme__figure">
+              <img class="scheme__img" src="../../assets/images/zoo_scheme.png" alt="Zoo picture">
+              <figcaption class="img__figcaption">Donations will go to the account of the zoo or nature reserve</figcaption>
+            </figure>
+            <figure class="scheme__figure">
+              <img class="scheme__arrow-down" src="../../assets/images/low_arrow.png" alt="">
+            </figure>
+            <figure class="scheme__figure">
+              <img class="scheme__img" src="../../assets/images/panda_scheme.png" alt="Panda eating a bambook stick">
+              <figcaption class="img__figcaption">The animal will receive a delicious treat during feeding hours</figcaption>
+            </figure>
+      </article>
+      <aside class="main__article testimonials">
+        <h3 class="article__heading testimonials__heading">Testimonials</h3>
+        <div class="testimonials__wrapper">
+          <button class="carousel__btn"><img src="../../assets/icons/arrow_left.png" alt=""></button>
+          <div class="testimonials__grid">
+            <img class="testimonials__user-img" src="../../assets/images/user-1.png" alt="Karen Maitland">
+            <p class="testimonials__user-name">Karen Maitland</p>
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <p class="testimonials__money-summ">+$10</p>
+            <p class="testimonials__speech">
+              "Thank you so much for these wonderful live webcams of the eagles on Catalina Island. Being able to watch them in their natural habitat as opposed to zoos is so wonderful. I cannot see myself ever being able to come up there to see them in person, so this is a great substitute. Thank you again."
+            </p>
+          </div>
+          <div class="testimonials__grid">
+            <img class="testimonials__user-img" src="../../assets/images/user-2.png" alt="Sara Jones">
+            <p class="testimonials__user-name">Sara Jones</p>
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <p class="testimonials__money-summ">+$13</p>
+            <p class="testimonials__speech">
+              "A disability prevents me from enjoying the outdoors and travel like I used to do. I really enjoy all the live cams and can spend HOURS watching real-time entertainment. Wild life style!"
+            </p>
+          </div>
+          <div class="testimonials__grid">
+            <img class="testimonials__user-img" src="../../assets/images/user-3.png" alt="Alex Barden">
+            <p class="testimonials__user-name">Alex Barden</p>
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <p class="testimonials__money-summ">+$7</p>
+            <p class="testimonials__speech">
+              "Here's a huge "thank-you" from New Hampshire - you allow me to travel the world without ever leaving the comfort of my office chair. Jammies on and coffee cup in hand, I am Phineas Fogg!!"
+            </p>
+          </div>
+          <div class="testimonials__grid">
+            <img class="testimonials__user-img" src="../../assets/images/user-4.png" alt="Alene Ray">
+            <p class="testimonials__user-name">Alene Ray</p>
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <p class="testimonials__money-summ">+$10</p>
+            <p class="testimonials__speech">
+              "Thank you for all the knowledge, education, pleasure and happiness you have add to all our lives at no expense on our part. My humble thanks and gratitude are being wished for all of you. I want to thank you and feed the animals a small reward"
+            </p>
+          </div>
+          
+          <button class="carousel__btn"><img src="../../assets/icons/arrow_right.png" alt=""></button>
+        </div>
+        <a>
+          <button class="btn btn_action_feedback">Leave feedback</button>
+        </a>
+      </aside>
     </main>
-    <aside class="aside"></aside>
     <footer class="footer"></footer>
   </body>
 </html>
