--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -12,49 +12,51 @@
   </head>
   <body class="page">
     <header class="header">
-      <a href="../landing/index.html" class="header__logo">
-        <img class="logo__img" src="../../assets/icons/logo.png" alt="Online zoo" />
-        <h1 class="hidden-heading">Online zoo</h1>
-      </a>
+      <div class="header__flex">
+        <a href="../landing/index.html" class="header__logo">
+          <img class="header__logo-img" src="../../assets/icons/logo.png" alt="Online zoo" />
+          <h1 class="hidden-heading">Online zoo</h1>
+        </a>
 
-      <nav class="header__nav">
-        <ul class="nav__list">
-          <li>
-            <a class="nav__item nav__item-highlighted"> About </a>
-          </li>
-          <li>
-            <a href="../map/index.html" class="nav__item"> Map </a>
-          </li>
-          <li>
-            <a href="../zoos/panda/index.html" class="nav__item"> Zoos </a>
-          </li>
-          <li>
-            <a href="../contacts/index.html" class="nav__item"> Contact us </a>
-          </li>
-          <li>
-            <a href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1" class="lis__item nav__item"> Design </a>
-          </li>
-        </ul>
-      </nav>
+        <nav class="header__nav">
+          <ul class="nav__list">
+            <li>
+              <a class="nav__item nav__item-highlighted"> About </a>
+            </li>
+            <li>
+              <a href="../map/index.html" class="nav__item"> Map </a>
+            </li>
+            <li>
+              <a href="../zoos/panda/index.html" class="nav__item"> Zoos </a>
+            </li>
+            <li>
+              <a href="../contacts/index.html" class="nav__item"> Contact us </a>
+            </li>
+            <li>
+              <a href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1" class="lis__item nav__item"> Design </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
-
     <main class="main">
-      <section class="main__top">
-        <div class="top__content">
-          <h2 class="top__heading">Watch your favorite animal <span class="text_uppercase">online</span></h2>
-          <a href="../zoos/panda/index.html">
-            <button class="btn btn_action_play">
-              &#9654 Play
-            </button>
-          </a>
-        </div>
-        <div class="top__background";>
-          <img class="background__drops-1" src="../../assets/images/drops1.png" alt="Drops image1">
-          <img class="background__panda-0" src="../../assets/images/image_panda-0.png" alt="Panda image1">
-          <img class="background__drops-2" src="../../assets/images/drops2.png" alt="Drops image2">
-        </div>  
-
-      </section>
+      <div class="top__background-wrap">
+        <section class="main__top">
+          <div class="top__content">
+            <h2 class="top__heading">Watch your favorite animal <span class="text_uppercase">online</span></h2>
+            <a href="../zoos/panda/index.html">
+              <button class="btn btn_action_play">
+                &#9654 Play
+              </button>
+            </a>
+          </div>
+          <div class="top__background";>
+            <img class="background__drops-1" src="../../assets/images/drops1.png" alt="Drops image1">
+            <img class="background__panda-0" src="../../assets/images/image_panda-0.png" alt="Panda image1">
+            <img class="background__drops-2" src="../../assets/images/drops2.png" alt="Drops image2">
+          </div>
+        </section>
+      </div>  
       <article class="main__article carousel-1">
         <h3 class="article__heading carousel-1__heading">How it works</h3>
         <ul class="carousel-1__list">
@@ -190,6 +192,33 @@
         </a>
       </aside>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="footer__background-wrap">
+        <div class="footer__grid">
+          <a href="../landing/index.html" class="footer__logo">
+            <img class="footer__logo-img" src="../../assets/icons/logo.png" alt="Online zoo" />
+          </a>
+          <a>
+            <button class="btn btn_action_donate">Donate for volunteers</button>
+          </a>
+          <ul class="footer__nav">
+            <li class="footer__nav-item"><a class="footer__nav-link" href="">About</a></li>
+            <li class="footer__nav-item"><a class="footer__nav-link" href="">Contact us</a></li>
+            <li class="footer__nav-item"><a class="footer__nav-link" href="">Map</a></li>
+            <li class="footer__nav-item"><a class="footer__nav-link" href="">Feedback</a></li>
+          </ul>
+          <ul class="footer__contacts">
+            <li><a href=""><img class="contacts__img" src="../../assets/icons/insta.png" alt="Instagram logo"></a></li>
+            <li><a href=""><img class="contacts__img" src="../../assets/icons/facebook.png" alt="Facebook logo"></a></li>
+            <li><a href=""><img class="contacts__img" src="../../assets/icons/twitter.png" alt="Twitter logo"></a></li>
+            <li><a href=""><img class="contacts__img" src="../../assets/icons/youtube.png" alt="Youtube logo"></a></li>
+          </ul>
+          <img class="footer__rss-logo" src="../../assets/icons/rss_logo.png" alt="Online zoo" />
+          <img class="footer__yem-logo" src="../../assets/icons/yem_logo.png" alt="Online zoo" />
+          <p class="footer__copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</p>
+          <p class="footer__reference">Grigoreva Margarita</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
