--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -209,10 +209,10 @@
             <li class="footer__nav-item"><a class="footer__nav-link" href="">Feedback</a></li>
           </ul>
           <ul class="footer__contacts">
-            <li><a href=""><img class="contacts__img" src="../../assets/icons/insta.png" alt="Instagram logo"></a></li>
-            <li><a href=""><img class="contacts__img" src="../../assets/icons/facebook.png" alt="Facebook logo"></a></li>
-            <li><a href=""><img class="contacts__img" src="../../assets/icons/twitter.png" alt="Twitter logo"></a></li>
-            <li><a href=""><img class="contacts__img" src="../../assets/icons/youtube.png" alt="Youtube logo"></a></li>
+            <li><a href="https://www.instagram.com/"><img class="contacts__img" src="../../assets/icons/insta.png" alt="Instagram logo"></a></li>
+            <li><a href="https://www.facebook.com/"><img class="contacts__img" src="../../assets/icons/facebook.png" alt="Facebook logo"></a></li>
+            <li><a href="https://www.twitter.com/"><img class="contacts__img" src="../../assets/icons/twitter.png" alt="Twitter logo"></a></li>
+            <li><a href="https://www.youtube.com/"><img class="contacts__img" src="../../assets/icons/youtube.png" alt="Youtube logo"></a></li>
           </ul>
           <img class="footer__rss-logo" src="../../assets/icons/rss_logo.png" alt="Online zoo" title="Rolling Scopes School"/>
           <img class="footer__yem-logo" src="../../assets/icons/yem_logo.png" alt="Online zoo" title="Yem Digital"/>
