init: implement eagle

--- a/online-zoo/pages/zoos/eagle/index.html
+++ b/online-zoo/pages/zoos/eagle/index.html
@@ -54,7 +54,7 @@
             </div>
           </div>
         </li>
-        <li class="side-bar__item_selected"><a><img src="../../../assets/icons/panda_selected.png" alt="Panda logo"></a>
+        <li class="side-bar__item"><a href="../panda/index.html"><img src="../../../assets/icons/panda.png" alt="Panda logo"></a>
           <div class="side-bar__tooltip">
             <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
             <div class="tooltip__text">
@@ -67,7 +67,7 @@
             </div>
           </div>
         </li>
-        <li class="side-bar__item"><a href="../eagle/index.html"><img src="../../../assets/icons/eagle.png" alt="Eagle logo"></a>
+        <li class="side-bar__item_selected"><a><img src="../../../assets/icons/eagle_selected.png" alt="Eagle logo"></a>
           <div class="side-bar__tooltip">
             <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
             <div class="tooltip__text">
@@ -99,30 +99,30 @@
     </aside>
     <main class="main">
       <article class="main__article video">
-        <h3 class="article__heading video__heading">Panda</h3>
-        <iframe class="video__main-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <h3 class="article__heading video__heading">Eagle</h3>
+        <iframe class="video__main-frame" src="https://www.youtube.com/embed/6vB7ZQi8ZHk" title="Eagle magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
         <div class="video__wrapper">
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe class="video__small-frame" src="https://www.youtube.com/embed/6vB7ZQi8ZHk" title="Eagle magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe class="video__small-frame" src="https://www.youtube.com/embed/6vB7ZQi8ZHk" title="Eagle magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe class="video__small-frame" src="https://www.youtube.com/embed/6vB7ZQi8ZHk" title="Eagle magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe class="video__small-frame" src="https://www.youtube.com/embed/6vB7ZQi8ZHk" title="Eagle magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
         </div>
       </article>
       <section class="main__article inf">
         <div class="inf__grid">
           <div class="inf_general">
-            <p class="general__text"><span class="text_uppercase">ZOO</span>: The Shenshuping Gengda Panda Center (Sichuan, China)</p>
+            <p class="general__text"><span class="text_uppercase">ZOO</span>: Santa Catalina Island Conservancy (California, USA)</p>
             <p class="general__text"><span class="text_uppercase">Enclosure type</span>: Imitation of the natural environment</p>
           </div>
           <article class="inf__article-grid article-grid__population">
             <h4 class="inf__heading text_uppercase">Population</h4>
             <p class="inf_text">
-              There are only an estimated 1600 pandas in the wild and about 325 in captivity.
+              Today, the population of bald eagles is in minimal danger. The total number of individuals is about two hundred thousand.
             </p>
             <button class="inf__btn_hide">
             </button>
@@ -130,21 +130,21 @@
           <article class="inf__article-grid article-grid__nutrition">
             <h4 class="inf__heading text_uppercase">Nutrition</h4>
             <p class="inf_text">
-              Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.
+              Mostly bald eagles feed on fish or birds. They also hunt ground squirrels, rabbits, beavers, raccoons and muskrats. Eagles can also attack a baby seal. Eagles also feed on carrion, for example, they eat the corpses of large horned animals.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
           <article class="inf__article-grid article-grid__habitat">
             <h4 class="inf__heading text_uppercase">Habitat</h4>
             <p class="inf_text">
-              Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few provinces of southwestern China.
+              A large number of eagles live in the state of Minnesota-about 1300 pairs. In another US state, Florida, there are about 1,200 pairs. In Alaska, about 40 thousand individuals nest annually, after laying eggs, with the onset of cold weather, the eagles fly south.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
           <article class="inf__article-grid article-grid__interesting">
             <h4 class="inf__heading text_uppercase">Interesting facts</h4>
             <p class="inf_text">
-              Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their coat keeps them warm in the cool moist climate of the mountain forests.
+              Bald eagles can live a long time, with a longevity record of 28 years in the wild and 36 years in captivity. The bald eagle is the national bird of the United States of America.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
