init: implement alligator

--- a/online-zoo/pages/zoos/alligator/index.html
+++ b/online-zoo/pages/zoos/alligator/index.html
@@ -5,17 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Zoo</title>
-    <link rel="shortcut icon" href="../../../assets/icons/logo.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+    <link rel="shortcut icon" href="../../../assets/icons/logo.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://meyerweb.com/eric/tools/css/reset/reset.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="page">
     <header class="header">
       <div class="header__flex">
         <a href="../../landing/index.html" class="header__logo">
-          <img class="header__logo-img" src="../../../assets/icons/logo.png" alt="Online Zoo" />
+          <img
+            class="header__logo-img"
+            src="../../../assets/icons/logo.png"
+            alt="Online Zoo"
+          />
           <h1 class="hidden-heading">Online Zoo</h1>
         </a>
         <nav class="header__nav">
@@ -30,10 +43,17 @@
               <a class="nav__item nav__item-highlighted"> Zoos </a>
             </li>
             <li>
-              <a href="../../contacts/index.html" class="nav__item"> Contact us </a>
+              <a href="../../contacts/index.html" class="nav__item">
+                Contact us
+              </a>
             </li>
             <li>
-              <a href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1" class="lis__item nav__item"> Design </a>
+              <a
+                href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1"
+                class="lis__item nav__item"
+              >
+                Design
+              </a>
             </li>
           </ul>
         </nav>
@@ -41,110 +61,176 @@
     </header>
     <aside class="side-bar">
       <ul class="side-bar__list">
-        <li class="side-bar__item"><a href="../alligator/index.html"><img src="../../../assets/icons/alligator.png" alt="Alligator logo"></a>
+        <li class="side-bar__item_selected">
+          <a
+            ><img
+              src="../../../assets/icons/alligator_selected.png"
+              alt="Alligator logo"
+          /></a>
           <div class="side-bar__tooltip">
-            <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
+            <img
+              class="tooltip__tip"
+              src="../../../assets/icons/tooltip_tip.png"
+              alt=""
+            />
             <div class="tooltip__text">
-              <p class="tooltip__text text_uppercase">
-                Alligator,
-              </p>
-              <p class="tooltip__text">
-                Florida, USA
-              </p>
+              <p class="tooltip__text text_uppercase">Alligator,</p>
+              <p class="tooltip__text">Florida, USA</p>
             </div>
           </div>
         </li>
-        <li class="side-bar__item_selected"><a><img src="../../../assets/icons/panda_selected.png" alt="Panda logo"></a>
+        <li class="side-bar__item">
+          <a href="../panda/index.html"
+            ><img src="../../../assets/icons/panda.png" alt="Panda logo"
+          /></a>
           <div class="side-bar__tooltip">
-            <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
+            <img
+              class="tooltip__tip"
+              src="../../../assets/icons/tooltip_tip.png"
+              alt=""
+            />
             <div class="tooltip__text">
-              <p class="tooltip__text text_uppercase">
-                Panda,
-              </p>
-              <p class="tooltip__text">
-                China
-              </p>
+              <p class="tooltip__text text_uppercase">Panda,</p>
+              <p class="tooltip__text">China</p>
             </div>
           </div>
         </li>
-        <li class="side-bar__item"><a href="../eagle/index.html"><img src="../../../assets/icons/eagle.png" alt="Eagle logo"></a>
+        <li class="side-bar__item">
+          <a href="../eagle/index.html"
+            ><img src="../../../assets/icons/eagle.png" alt="Eagle logo"
+          /></a>
           <div class="side-bar__tooltip">
-            <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
+            <img
+              class="tooltip__tip"
+              src="../../../assets/icons/tooltip_tip.png"
+              alt=""
+            />
             <div class="tooltip__text">
-              <p class="tooltip__text text_uppercase">
-                Eagle,
-              </p>
-              <p class="tooltip__text">
-                California, USA
-              </p>
+              <p class="tooltip__text text_uppercase">Eagle,</p>
+              <p class="tooltip__text">California, USA</p>
             </div>
           </div>
         </li>
-        <li class="side-bar__item"><a href="../gorilla/index.html"><img src="../../../assets/icons/gorilla.png" alt="Gorilla logo"></a>
+        <li class="side-bar__item">
+          <a href="../gorilla/index.html"
+            ><img src="../../../assets/icons/gorilla.png" alt="Gorilla logo"
+          /></a>
           <div class="side-bar__tooltip">
-            <img class="tooltip__tip" src="../../../assets/icons/tooltip_tip.png" alt="">
+            <img
+              class="tooltip__tip"
+              src="../../../assets/icons/tooltip_tip.png"
+              alt=""
+            />
             <div class="tooltip__text">
-              <p class="tooltip__text text_uppercase">
-                Gorilla,
-              </p>
-              <p class="tooltip__text">
-                Eastern DRC
-              </p>
+              <p class="tooltip__text text_uppercase">Gorilla,</p>
+              <p class="tooltip__text">Eastern DRC</p>
             </div>
           </div>
         </li>
-        <li class="side-bar__item"><a><img class="item__panda-pic" src="../../../assets/icons/panda_pic.png" alt="Panda picture"></a>
+        <li class="side-bar__item">
+          <a
+            ><img
+              class="item__panda-pic"
+              src="../../../assets/icons/panda_pic.png"
+              alt="Panda picture"
+          /></a>
         </li>
       </ul>
     </aside>
     <main class="main">
       <article class="main__article video">
-        <h3 class="article__heading video__heading">Panda</h3>
-        <iframe class="video__main-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <h3 class="article__heading video__heading">Alligator</h3>
+        <iframe
+          class="video__main-frame"
+          src="https://www.youtube.com/embed/U9mvKA2CvyY"
+          title="Panda magic"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        >
         </iframe>
         <div class="video__wrapper">
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe
+            class="video__small-frame"
+            src="https://www.youtube.com/embed/U9mvKA2CvyY"
+            title="Panda magic"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe
+            class="video__small-frame"
+            src="https://www.youtube.com/embed/U9mvKA2CvyY"
+            title="Panda magic"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe
+            class="video__small-frame"
+            src="https://www.youtube.com/embed/U9mvKA2CvyY"
+            title="Panda magic"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
           </iframe>
-          <iframe class="video__small-frame" src="https://www.youtube.com/embed/9lFMnzGMz1M" title="Panda magic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+          <iframe
+            class="video__small-frame"
+            src="https://www.youtube.com/embed/U9mvKA2CvyY"
+            title="Panda magic"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
           </iframe>
         </div>
       </article>
       <section class="main__article inf">
         <div class="inf__grid">
           <div class="inf_general">
-            <p class="general__text"><span class="text_uppercase">ZOO</span>: The Shenshuping Gengda Panda Center (Sichuan, China)</p>
-            <p class="general__text"><span class="text_uppercase">Enclosure type</span>: Imitation of the natural environment</p>
+            <p class="general__text">
+              <span class="text_uppercase">ZOO</span>: Alligator Farm Zoological
+              Park in Florida (USA)
+            </p>
+            <p class="general__text">
+              <span class="text_uppercase">Enclosure type</span>: Imitation of
+              the natural environment
+            </p>
           </div>
           <article class="inf__article-grid article-grid__population">
             <h4 class="inf__heading text_uppercase">Population</h4>
             <p class="inf_text">
-              There are only an estimated 1600 pandas in the wild and about 325 in captivity.
+              There are now more than 1 million alligators in the wild.
             </p>
-            <button class="inf__btn_hide">
-            </button>
+            <button class="inf__btn_hide"></button>
           </article>
           <article class="inf__article-grid article-grid__nutrition">
             <h4 class="inf__heading text_uppercase">Nutrition</h4>
             <p class="inf_text">
-              Bamboo is indispensable for the big panda, 99% of their food is made up of shoots and leaves of the plant. Bamboo does not have a high nutritional value. And to meet the daily energy requirement, pandas need to eat between 23 and 40 kg of evergreen per day.
+              These apex predators eat mostly fish, turtles, snakes, birds and
+              small mammals. But alligators are known for being opportunists;
+              when hungry, they will attack larger prey like deer or cattle.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
           <article class="inf__article-grid article-grid__habitat">
             <h4 class="inf__heading text_uppercase">Habitat</h4>
             <p class="inf_text">
-              Bamboo will occasionally «die off» forcing pandas to migrate to other areas to find enough bamboo. Today panda habitat is limited to the mountains in only a few provinces of southwestern China.
+              Alligators are almost exclusively found in freshwater rivers,
+              lakes, marshes or swamps.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
           <article class="inf__article-grid article-grid__interesting">
             <h4 class="inf__heading text_uppercase">Interesting facts</h4>
             <p class="inf_text">
-              Pandas are slow moving and spend a considerable amount of time eating (16 — 24 hour period) and sleeping. Giant panda fur is coarse, dense and somewhat oily. Their coat keeps them warm in the cool moist climate of the mountain forests.
+              American alligators are typically between 10 and 15 feet long and
+              can weigh 1,000 lbs. Despite being large and somewhat ungainly,
+              alligators can run up to 11 mph on land--but they can't sustain
+              that speed for very long.
             </p>
             <button class="inf__btn_hide"></button>
           </article>
@@ -155,30 +241,90 @@
       <div class="footer__background-wrap">
         <div class="footer__grid">
           <a href="../../landing/index.html" class="footer__logo">
-            <img class="footer__logo-img" src="../../../assets/icons/logo.png" alt="Online zoo" />
+            <img
+              class="footer__logo-img"
+              src="../../../assets/icons/logo.png"
+              alt="Online zoo"
+            />
           </a>
           <a>
             <button class="btn btn_action_donate">Donate for volunteers</button>
           </a>
           <ul class="footer__nav">
-            <li class="footer__nav-item"><a class="footer__nav-link" href="../../landing/index.htm">About</a></li>
-            <li class="footer__nav-item"><a class="footer__nav-link" href="../../contacts/index.html">Contact us</a></li>
-            <li class="footer__nav-item"><a class="footer__nav-link" href="../../map/index.html">Map</a></li>
-            <li class="footer__nav-item"><a class="footer__nav-link" href="">Feedback</a></li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="../../landing/index.htm"
+                >About</a
+              >
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="../../contacts/index.html"
+                >Contact us</a
+              >
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="../../map/index.html">Map</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="">Feedback</a>
+            </li>
           </ul>
           <ul class="footer__contacts">
-            <li><a href="https://www.instagram.com/"><img class="contacts__img" src="../../../assets/icons/insta.png" alt="Instagram logo"></a></li>
-            <li><a href="https://www.facebook.com/"><img class="contacts__img" src="../../../assets/icons/facebook.png" alt="Facebook logo"></a></li>
-            <li><a href="https://www.twitter.com/"><img class="contacts__img" src="../../../assets/icons/twitter.png" alt="Twitter logo"></a></li>
-            <li><a href="https://www.youtube.com/"><img class="contacts__img" src="../../../assets/icons/youtube.png" alt="Youtube logo"></a></li>
+            <li>
+              <a href="https://www.instagram.com/"
+                ><img
+                  class="contacts__img"
+                  src="../../../assets/icons/insta.png"
+                  alt="Instagram logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/"
+                ><img
+                  class="contacts__img"
+                  src="../../../assets/icons/facebook.png"
+                  alt="Facebook logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.twitter.com/"
+                ><img
+                  class="contacts__img"
+                  src="../../../assets/icons/twitter.png"
+                  alt="Twitter logo"
+              /></a>
+            </li>
+            <li>
+              <a href="https://www.youtube.com/"
+                ><img
+                  class="contacts__img"
+                  src="../../../assets/icons/youtube.png"
+                  alt="Youtube logo"
+              /></a>
+            </li>
           </ul>
-          <img class="footer__rss-logo" src="../../../assets/icons/rss_logo.png" alt="Online zoo" title="Rolling Scopes School"/>
-          <img class="footer__yem-logo" src="../../../assets/icons/yem_logo.png" alt="Online zoo" title="Yem Digital"/>
-          <p class="footer__copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</p>
+          <img
+            class="footer__rss-logo"
+            src="../../../assets/icons/rss_logo.png"
+            alt="Online zoo"
+            title="Rolling Scopes School"
+          />
+          <img
+            class="footer__yem-logo"
+            src="../../../assets/icons/yem_logo.png"
+            alt="Online zoo"
+            title="Yem Digital"
+          />
+          <p class="footer__copyright">
+            Copyright ©RSSchool and ©Yem Digital 2020 - 2021
+          </p>
           <p class="footer__reference">Grigoreva Margarita</p>
         </div>
         <div class="footer_bg">
-          <img class="footer__bg-img" src="../../../assets/images/footer_comb_bg.png" alt="">
+          <img
+            class="footer__bg-img"
+            src="../../../assets/images/footer_comb_bg.png"
+            alt=""
+          />
         </div>
       </div>
     </footer>
