init: implement MAP

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -67,7 +67,10 @@
             <div>
               <a class="item__logo logo_alligator">
                 </a>
-              </div>
+            </div>
+            <div class="map__word text_uppercase">
+              Alligator
+            </div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -85,6 +88,11 @@
             <div>
               <a class="item__logo logo_panda">
                 </a>
+              </div>
+              <div class="map__word text_uppercase">
+                Panda 
+                <br>
+                bear
               </div>
             <div class="map__tooltip">
               <img
@@ -104,6 +112,9 @@
               <a class="item__logo logo_eagle">
                 </a>
               </div>
+                <div class="map__word text_uppercase">
+                  Eagle
+                </div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -120,6 +131,9 @@
             <div>
               <a class="item__logo logo_gorilla">
                 </a>
+              </div>
+              <div class="map__word text_uppercase">
+                Gorilla
               </div>
             <div class="map__tooltip">
               <img
