init: implement MAP

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -65,7 +65,7 @@
         <div class="map__icons">
           <div class="map__item item_alligator">
             <div>
-              <a class="item__logo logo_alligator">
+              <a href="../zoos/alligator/index.html" class="item__logo logo_alligator">
                 </a>
             </div>
             <div class="map__word text_uppercase">
@@ -86,7 +86,7 @@
 
           <div class="map__item item_panda">
             <div>
-              <a class="item__logo logo_panda">
+              <a href="../zoos/panda/index.html" class="item__logo logo_panda">
                 </a>
               </div>
               <div class="map__word text_uppercase">
@@ -109,7 +109,7 @@
 
           <div class="map__item item_eagle">
             <div>
-              <a class="item__logo logo_eagle">
+              <a href="../zoos/eagle/index.html" class="item__logo logo_eagle">
                 </a>
               </div>
                 <div class="map__word text_uppercase">
@@ -129,7 +129,7 @@
           </div>
           <div class="map__item item_gorilla">
             <div>
-              <a class="item__logo logo_gorilla">
+              <a href="../zoos/gorilla/index.html" class="item__logo logo_gorilla">
                 </a>
               </div>
               <div class="map__word text_uppercase">
