fix: fix bad link about in the footer

--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -203,7 +203,7 @@
             <button class="btn btn_action_donate">Donate for volunteers</button>
           </a>
           <ul class="footer__nav">
-            <li class="footer__nav-item"><a class="footer__nav-link" href="../landing/index.htm">About</a></li>
+            <li class="footer__nav-item"><a class="footer__nav-link" href="../landing/index.html">About</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="../contacts/index.html">Contact us</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="../map/index.html">Map</a></li>
             <li class="footer__nav-item"><a class="footer__nav-link" href="">Feedback</a></li>
