--- a/online-zoo/pages/zoos/alligator/index.html
+++ b/online-zoo/pages/zoos/alligator/index.html
@@ -252,7 +252,7 @@
           </a>
           <ul class="footer__nav">
             <li class="footer__nav-item">
-              <a class="footer__nav-link" href="../../landing/index.htm"
+              <a class="footer__nav-link" href="../../landing/index.html"
                 >About</a
               >
             </li>
