--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -170,7 +170,7 @@
           </a>
           <ul class="footer__nav">
             <li class="footer__nav-item">
-              <a class="footer__nav-link" href="../landing/index.htm">About</a>
+              <a class="footer__nav-link" href="../landing/index.html">About</a>
             </li>
             <li class="footer__nav-item">
               <a class="footer__nav-link" href="../contacts/index.html"
