fix: add missing items on map

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -112,7 +112,7 @@
               <a href="../zoos/eagle/index.html" class="item__logo logo_eagle">
                 </a>
               </div>
-                <div class="map__word text_uppercase">
+                <div class="map__word text_uppercase map__word_eagle">
                   Eagle
                 </div>
             <div class="map__tooltip">
@@ -146,6 +146,18 @@
                 <p class="tooltip__text">Eastern DRC</p>
               </div>
             </div>
+          </div>
+          <div class="map__item item_zoom">
+            <img src="../../assets/images/zoom.png" alt="">
+          </div>
+          <div class="map__item item_country-name">
+            <p class="item_text-1">USA</p>
+          </div>
+          <div class="map__item item_country-name">
+            <p class="item_text-2">Eastern<br>DRC.</p>
+          </div>
+          <div class="map__item item_country-name">
+            <p class="item_text-3">China</p>
           </div>
         </div>
         <img
