fix: change site icon for browser tab

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Zoo</title>
-    <link rel="shortcut icon" href="../../assets/icons/logo.png" />
+    <link rel="shortcut icon" href="../../assets/icons/site_icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
@@ -65,12 +65,13 @@
         <div class="map__icons">
           <div class="map__item item_alligator">
             <div>
-              <a href="../zoos/alligator/index.html" class="item__logo logo_alligator">
-                </a>
+              <a
+                href="../zoos/alligator/index.html"
+                class="item__logo logo_alligator"
+              >
+              </a>
             </div>
-            <div class="map__word text_uppercase">
-              Alligator
-            </div>
+            <div class="map__word text_uppercase">Alligator</div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -87,13 +88,13 @@
           <div class="map__item item_panda">
             <div>
               <a href="../zoos/panda/index.html" class="item__logo logo_panda">
-                </a>
-              </div>
-              <div class="map__word text_uppercase">
-                Panda 
-                <br>
-                bear
-              </div>
+              </a>
+            </div>
+            <div class="map__word text_uppercase">
+              Panda
+              <br />
+              bear
+            </div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -110,11 +111,9 @@
           <div class="map__item item_eagle">
             <div>
               <a href="../zoos/eagle/index.html" class="item__logo logo_eagle">
-                </a>
-              </div>
-                <div class="map__word text_uppercase map__word_eagle">
-                  Eagle
-                </div>
+              </a>
+            </div>
+            <div class="map__word text_uppercase map__word_eagle">Eagle</div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -129,12 +128,13 @@
           </div>
           <div class="map__item item_gorilla">
             <div>
-              <a href="../zoos/gorilla/index.html" class="item__logo logo_gorilla">
-                </a>
-              </div>
-              <div class="map__word text_uppercase">
-                Gorilla
-              </div>
+              <a
+                href="../zoos/gorilla/index.html"
+                class="item__logo logo_gorilla"
+              >
+              </a>
+            </div>
+            <div class="map__word text_uppercase">Gorilla</div>
             <div class="map__tooltip">
               <img
                 class="tooltip__tip"
@@ -148,13 +148,13 @@
             </div>
           </div>
           <div class="map__item item_zoom">
-            <img src="../../assets/images/zoom.png" alt="">
+            <img src="../../assets/images/zoom.png" alt="" />
           </div>
           <div class="map__item item_country-name">
             <p class="item_text-1">USA</p>
           </div>
           <div class="map__item item_country-name">
-            <p class="item_text-2">Eastern<br>DRC.</p>
+            <p class="item_text-2">Eastern<br />DRC.</p>
           </div>
           <div class="map__item item_country-name">
             <p class="item_text-3">China</p>
