--- a/online-zoo/pages/contacts/index.html
+++ b/online-zoo/pages/contacts/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Zooops!</title>
-    <link rel="shortcut icon" href="../../assets/icons/logo.png" />
+    <link rel="shortcut icon" href="../../assets/icons/site_icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
@@ -23,14 +23,15 @@
   <body class="page">
     <h1 class="hidden-heading">Online Zoo</h1>
     <main class="main">
-      <img class="main__ooops-img" src="../../assets/images/ooops_404.png" alt="Oooops! 404 pandas on the page">
-      <h2 class="main__heading text_uppercase">
-        Page not found
-      </h2>
+      <img
+        class="main__ooops-img"
+        src="../../assets/images/ooops_404.png"
+        alt="Oooops! 404 pandas on the page"
+      />
+      <h2 class="main__heading text_uppercase">Page not found</h2>
       <a class="main__link text_uppercase" href="../landing/index.html">
         Go back and try a different link
       </a>
     </main>
-    
   </body>
 </html>
