--- a/online-zoo/pages/zoos/alligator/index.html
+++ b/online-zoo/pages/zoos/alligator/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Zoo</title>
-    <link rel="shortcut icon" href="../../../assets/icons/logo.png" />
+    <link rel="shortcut icon" href="../../../assets/icons/site_icon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap"
       rel="stylesheet"
