feat: add landing_1200 adaptive

--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -45,9 +45,10 @@
         <section class="main__top">
           <div class="top__content">
             <h2 class="top__heading">Watch your favorite animal <span class="text_uppercase">online</span></h2>
-            <a href="../zoos/panda/index.html">
+            <a class="btn_text-style_none" href="../zoos/panda/index.html">
               <button class="btn btn_action_play">
-                &#9654 Play
+                <img class="" src="../../assets/icons/play_triang.png" alt="">
+                <span class="btn_correct-pos_play">Play</span>
               </button>
             </a>
           </div>
@@ -60,13 +61,15 @@
       </div>  
       <article class="main__article carousel-1">
         <h3 class="article__heading carousel-1__heading">How it works</h3>
-        <ul class="carousel-1__list">
-          <li><img class="carousel-1__img" src="../../assets/images/image_eagle-1.png" alt="Eagle"></li>
-          <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_tiger-1.png" alt="Tiger"></li>
-          <li class="item_up"><img class="carousel-1__img img_l" src="../../assets/images/image_panda-1.png" alt="Panda"></li>
-          <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_pavian-1.png" alt="Pavian"></li>
-          <li><img class="carousel-1__img" src="../../assets/images/image_elefant-1.png" alt="Elefant"></li>
-        </ul>
+        <div class="carousel-1_bg-wrapper">
+          <ul class="carousel-1__list">
+            <li><img class="carousel-1__img" src="../../assets/images/image_eagle-1.png" alt="Eagle"></li>
+            <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_tiger-1.png" alt="Tiger"></li>
+            <li class="item_up"><img class="carousel-1__img img_l" src="../../assets/images/image_panda-1.png" alt="Panda"></li>
+            <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_pavian-1.png" alt="Pavian"></li>
+            <li><img class="carousel-1__img" src="../../assets/images/image_elefant-1.png" alt="Elefant"></li>
+          </ul>
+        </div>
         <p class="carousel-1__text">
           The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska, Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and you want to please it with a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours.
           <br>
@@ -219,9 +222,9 @@
           <p class="footer__copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</p>
           <p class="footer__reference">Grigoreva Margarita</p>
         </div>
-        <div class="footer_bg">
+        <!-- <div class="footer_bg">
           <img class="footer__bg-img" src="../../assets/images/footer_comb_bg.png" alt="">
-        </div>
+        </div> -->
       </div>
     </footer>
   </body>
